finish styling the features section on the tindog project

--- a/section6/tindog/css/styles.css
+++ b/section6/tindog/css/styles.css
@@ -49,3 +49,33 @@ h1 {
     width: 60%;
     transform: rotate(25deg);
 }
+
+/* Features */
+#features {
+    padding: 7% 15%;
+}
+
+.feature-box {
+    text-align: center;
+    padding: 4.5%;
+}
+
+.feature-box h3 {
+    font-family: 'Monserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 5%;
+}
+
+.feature-box p {
+    color: #8f8f8f;
+}
+
+.icon {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.icon:hover {
+    color: #ff4c68;
+}
