--- a/section7/tindog/css/styles.css
+++ b/section7/tindog/css/styles.css
@@ -33,7 +33,7 @@ p {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -66,11 +66,15 @@ p {
 .title-image {
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 
-/* Features */
+/* Features Section */
 #features {
     padding: 7% 15%;
+    background-color: white;
+    position: relative;
 }
 
 .feature-box {
@@ -87,7 +91,7 @@ p {
     color: #ff4c68;
 }
 
-/* Testimonial section */
+/* Testimonial Section */
 
 #testimonials {
     background-color: #ef8172;
