--- a/section7/tindog/css/styles.css
+++ b/section7/tindog/css/styles.css
@@ -130,3 +130,15 @@ p {
 .pricing-column {
     padding: 3% 2%;
 }
+
+/* Media Queries*/
+@media (max-width: 992px) {
+    #title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
+}
