finish styling the cta and footer sections on the tindog project

--- a/section7/tindog/css/styles.css
+++ b/section7/tindog/css/styles.css
@@ -131,6 +131,31 @@ p {
     padding: 3% 2%;
 }
 
+/* Call to Action Section */
+#cta {
+    background-color: #ff4c68;
+    text-align: center;
+    color: #fff;
+}
+
+.cta-heading {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    font-weight: 900;
+    line-height: 1.5;
+    padding: 7% 15%;
+}
+
+/* Footer Section */
+#footer {
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.social-icon {
+    margin: 20px 10px;
+}
+
 /* Media Queries*/
 @media (max-width: 992px) {
     #title {
