--- a/section7/tindog/css/styles.css
+++ b/section7/tindog/css/styles.css
@@ -1,39 +1,32 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 3.5rem;
     font-weight: 900;
-    line-height: 1.5;
-}
-
-h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
-    font-weight: 900;
-    line-height: 1.5;
-}
-
-h3 {
-    font-family: 'Monserrat', sans-serif;
-    font-size: 1.5rem;
-    font-weight: bold;
-    padding: 5%;
 }
 
 p {
     color: #8f8f8f;
 }
 
-#title {
-    background-color: #ff4c68;
-    color: white;
+.container-fluid {
+    padding: 7% 15%;
 }
 
-.container-fluid {
-    padding: 3% 15% 7%;
+/* Headings */
+.big-heading {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5rem;
+    font-weight: 900;
+    line-height: 1.5;
+}
+
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 /* Navigation Bar */
@@ -57,6 +50,18 @@ p {
     font-weight: 300;
 }
 
+/* Title Section */
+
+#title {
+    background-color: #ff4c68;
+    color: white;
+    text-align: left;
+}
+
+#title .container-fluid {
+    padding: 3% 15% 7%;
+}
+
 /* Download Buttons */
 .download-button {
     margin: 5% 3% 5% 0;
@@ -72,13 +77,11 @@ p {
 
 /* Features Section */
 #features {
-    padding: 7% 15%;
     background-color: white;
     position: relative;
 }
 
 .feature-box {
-    text-align: center;
     padding: 4.5%;
 }
 
@@ -91,11 +94,15 @@ p {
     color: #ff4c68;
 }
 
+.feature-title {
+    font-size: 1.5rem;
+    padding: 5%;
+}
+
 /* Testimonial Section */
 
 #testimonials {
     background-color: #ef8172;
-    text-align: center;
     color: #fff;
 }
 
@@ -105,13 +112,13 @@ p {
     margin: 20px;
 }
 
-.carousel-item {
-    padding: 7% 15%;
+.testimonial-text {
+    font-size: 3rem;
+    line-height: 1.5;
 }
 
 #press {
     background-color: #ef8172;
-    text-align: center;
     padding-bottom: 3%;
 }
 
@@ -124,34 +131,29 @@ p {
 
 #pricing {
     padding: 100px;
-    text-align: center;
 }
 
 .pricing-column {
     padding: 3% 2%;
 }
 
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.pricing-title {
+    font-size: 1.5rem;
+    padding: 5%;
+}
+
 /* Call to Action Section */
 #cta {
     background-color: #ff4c68;
-    text-align: center;
     color: #fff;
 }
 
-.cta-heading {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3.5rem;
-    font-weight: 900;
-    line-height: 1.5;
-    padding: 7% 15%;
-}
-
 /* Footer Section */
-#footer {
-    padding: 7% 15%;
-    text-align: center;
-}
-
 .social-icon {
     margin: 20px 10px;
 }
