--- a/section7/tindog/css/styles.css
+++ b/section7/tindog/css/styles.css
@@ -12,10 +12,6 @@ p {
     color: #8f8f8f;
 }
 
-.container-fluid {
-    padding: 7% 15%;
-}
-
 /* Headings */
 .big-heading {
     font-family: 'Montserrat', sans-serif;
@@ -27,6 +23,21 @@ p {
 .section-heading {
     font-size: 3rem;
     line-height: 1.5;
+}
+
+/* Containers */
+.container-fluid {
+    padding: 7% 15%;
+}
+
+/* Sections */
+.colored-section {
+    background-color: #ff4c68;
+    color: white;
+}
+
+.white-section {
+    background-color: white;
 }
 
 /* Navigation Bar */
@@ -52,13 +63,8 @@ p {
 
 /* Title Section */
 
-#title {
-    background-color: #ff4c68;
-    color: white;
-    text-align: left;
-}
-
 #title .container-fluid {
+    text-align: left;
     padding: 3% 15% 7%;
 }
 
@@ -77,7 +83,6 @@ p {
 
 /* Features Section */
 #features {
-    background-color: white;
     position: relative;
 }
 
@@ -103,7 +108,6 @@ p {
 
 #testimonials {
     background-color: #ef8172;
-    color: #fff;
 }
 
 .testimonial-image {
@@ -145,12 +149,6 @@ p {
 .pricing-title {
     font-size: 1.5rem;
     padding: 5%;
-}
-
-/* Call to Action Section */
-#cta {
-    background-color: #ff4c68;
-    color: #fff;
 }
 
 /* Footer Section */
